Opened 8 months ago

Closed 8 months ago

Last modified 8 months ago

#18915 closed bug (fixed)

PANIC: page fault, but interrupts were disabled

Reported by: bbjimmy Owned by: nobody
Priority: blocker Milestone: R1/beta5
Component: System/Kernel Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by diver)

I updated to hrev57762

PANIC on boot.

Disabling smp in the bios allows the system to boot properly.

Attachments (1)

IMG_20240612_074820386_HDR.jpg (2.6 MB ) - added by bbjimmy 8 months ago.
Image of the Kernel PANICK

Change History (40)

by bbjimmy, 8 months ago

Image of the Kernel PANICK

comment:1 by nephele, 8 months ago

What was the previous working hrev?

in reply to:  1 comment:3 by bbjimmy, 8 months ago

Replying to nephele:

What was the previous working?

hrev57754-1-x86_64

Last edited 8 months ago by bbjimmy (previous) (diff)

comment:4 by diver, 8 months ago

Description: modified (diff)
Summary: PANICK: page cault but interrupts were disabled.PANIC: page fault, but interrupts were disabled
Version: R1/beta4R1/Development

comment:5 by nephele, 8 months ago

From those it looks like the issue may have been introduced in hrev57761

comment:7 by X512, 8 months ago

A bit unrelated but I don't know another place that Korli can see. It is fine to get non-root element of binary heap? It will be not guaranteed to be next minimum/maximum value. Heapify operation will be required.

-	inline	Element*	PeekRoot() const;
+	inline	Element*	PeekRoot(int32 index = 0) const;

in reply to:  7 comment:8 by korli, 8 months ago

Replying to X512:

A bit unrelated but I don't know another place that Korli can see. It is fine to get non-root element of binary heap? It will be not guaranteed to be next minimum/maximum value. Heapify operation will be required.

I'm not expert on this. As there is no unit tests for the MinMapHeap, it's difficult to evaluate. Non-root elements are only needed when the top element doesn't fit on the current CPU/Core/Package. Are you able to identify the heapify operation in this class?

comment:9 by korli, 8 months ago

Resolution: fixed
Status: newclosed

Should be fixed in hrev57765.

comment:10 by X512, 8 months ago

Seems still not fixed in hrev57765 for me. Various userland processes (locale etc.) crash nearly immediately after rocket icon, causing displaying debugger in consoled. hrev57760 works fine.

comment:11 by CodeforEvolution, 8 months ago

Same here...I had an immediate page fault even before the the Rocket showed up for x86_64 running on QEMU with hrev57763.

in reply to:  10 comment:12 by X512, 8 months ago

Replying to X512:

Seems still not fixed in hrev57765 for me. Various userland processes (locale etc.) crash nearly immediately after rocket icon, causing displaying debugger in consoled. hrev57760 works fine.

False alarm. It was overridden libroot.so in non-packaged directory.

in reply to:  11 ; comment:13 by korli, 8 months ago

Replying to CodeforEvolution:

Same here...I had an immediate page fault even before the the Rocket showed up for x86_64 running on QEMU with hrev57763.

Thanks for the feedback, I'm afraid hrev57765 isn't yet available. See #18917

in reply to:  13 ; comment:14 by korli, 8 months ago

Thanks for the feedback, I'm afraid hrev57765 isn't yet available. See #18917

hrev57768 is now available.

comment:15 by bbjimmy, 8 months ago

The latest update boota with all four cores running! Thanks.

in reply to:  14 ; comment:16 by kim1963, 8 months ago

Replying to korli:

Thanks for the feedback, I'm afraid hrev57765 isn't yet available. See #18917

hrev57768 is now available.

In hrev57768 broken CPU "Energy saving mode"

in reply to:  16 ; comment:17 by korli, 8 months ago

Replying to kim1963:

In hrev57768 broken CPU "Energy saving mode"

Thanks for the feedback. What do you mean by broken?

in reply to:  17 comment:18 by kim1963, 8 months ago

Replying to korli:

Replying to kim1963:

In hrev57768 broken CPU "Energy saving mode"

Thanks for the feedback. What do you mean by broken?

You can reproduce the bug like this - turn on the energy conservation mode - Dooble browser - to go to YouTube.com repeatedly verified by assembly 57768 64 bits - CPU i5-8400

As a result, we get KDL panic and spontaneous reboot of the computer.

comment:20 by korli, 8 months ago

@kim1963 please check with hrev57783 or newer

comment:21 by korli, 8 months ago

@kim1963 please check with hrev57783 or newer

in reply to:  19 comment:22 by kim1963, 8 months ago

Last edited 8 months ago by kim1963 (previous) (diff)

in reply to:  20 comment:23 by kim1963, 8 months ago

Last edited 8 months ago by kim1963 (previous) (diff)

in reply to:  21 comment:24 by kim1963, 8 months ago

Last edited 8 months ago by kim1963 (previous) (diff)

comment:25 by kim1963, 8 months ago

Last edited 8 months ago by kim1963 (previous) (diff)

in reply to:  21 comment:26 by kim1963, 8 months ago

Replying to korli:

@kim1963 please check with hrev57783 or newer

hrev57793 - broken

As a result, we get KDL panic and spontaneous reboot of the computer.

comment:27 by kim1963, 8 months ago

hrev57793 - broken

As a result, we get KDL panic and spontaneous reboot of the computer.

in reply to:  27 ; comment:28 by korli, 8 months ago

Replying to kim1963:

hrev57793 - broken

As a result, we get KDL panic and spontaneous reboot of the computer.

I had a crash today too, please check with hrev57794 when it's available.

in reply to:  28 comment:29 by kim1963, 8 months ago

Replying to korli:

Replying to kim1963:

hrev57793 - broken

As a result, we get KDL panic and spontaneous reboot of the computer.

I had a crash today too, please check with hrev57794 when it's available.

hrev57797 - work fine!

in reply to:  28 comment:30 by kim1963, 8 months ago

Replying to korli:

Replying to kim1963:

hrev57793 - broken

As a result, we get KDL panic and spontaneous reboot of the computer.

I had a crash today too, please check with hrev57794 when it's available.

in reply to:  28 comment:31 by kim1963, 8 months ago

hrev57797 - work fine !

Last edited 8 months ago by kim1963 (previous) (diff)

comment:32 by kim1963, 8 months ago

hrev57797 - work fine!

comment:33 by kim1963, 8 months ago

hrev57797 - work fine!

comment:34 by nephele, 8 months ago

Please comment only once for that, subscribers get an email for every new comment you post.

in reply to:  34 ; comment:35 by korli, 8 months ago

Replying to nephele:

Please comment only once for that, subscribers get an email for every new comment you post.

I had these too. It's a Trac problem, the page request stays in-flight. Reloading the page doesn't show the comment, whereas it should.

comment:36 by kim1963, 8 months ago

test hrev57798

comment:37 by kim1963, 8 months ago

hrev57798 test

in reply to:  35 comment:38 by kim1963, 8 months ago

Replying to korli:

Replying to nephele:

Please comment only once for that, subscribers get an email for every new comment you post.

I had these too. It's a Trac problem, the page request stays in-flight. Reloading the page doesn't show the comment, whereas it should.

YES!!!

comment:39 by bipolar, 8 months ago

Just got this panic with hrev57804 (64 bits). "Power saving" mode was enabled at the time.

I was testing a build of https://github.com/fabiangreffrath/taradino/ (needs shareware data from: https://maniacsvault.net/ecwolf/files/shareware/1rott13.zip, and using -DTARADINO_SHAREWARE=ON on the cmake line).

KDL mentioned _user_mutex_sem_release (nearest) + 0x1060 and Scheduler::ThreadData::ChooseCoreAndCPU(...).

KDL happened after trying to exit taradino, having to kill it because it hangs on some midi code, and restarting it 2 times.

Without using "Power saving" mode, program runs/restarts fine (besides the midi issue). Trying again with Power saving mode enabled... couldn't reproduce the KDL, but system froze 2 times (had to force power down).

Note: See TracTickets for help on using tickets.