src/system/kernel/cpu.cpp
@@ -150,7 +150,7 @@ cpu_preboot_init_percpu(kernel_args *args, int curr_cpu)
 	// we can use it for get_current_cpu
 	memset(&gCPU[curr_cpu], 0, sizeof(gCPU[curr_cpu]));
 	gCPU[curr_cpu].cpu_num = curr_cpu;
-	gCPUEnabled.SetBit(curr_cpu);
+	gCPUEnabled.SetBitAtomic(curr_cpu);
 
 	list_init(&gCPU[curr_cpu].irqs);
 	B_INITIALIZE_SPINLOCK(&gCPU[curr_cpu].irqs_lock);
